bad/assign_field_class_arr_elem_class_side.example_compiler_output
ERROR
[1mbad/assign_field_class_arr_elem_class_side.lat:10:20: [1;31merror: [0;1massigning to `Y` from incompatible type `Z`[m
	(new C[1])[2].fld = new Z;
	                  [1;32m^[m
